# uranus

./: .gitignore  Dockerfile  README  README.md  autogen.sh  configure.patch  install_dep.sh  jdk.aarch64.patch
hotspot/: CMakeLists.txt  edl_gen.py  toolchain-arm.cmake
hotspot/enclave/: count_code
hotspot/enclave/cpu/aarch64/vm/: assembler_aarch64.cpp  assembler_aarch64.inline.hpp  c0_CodeStubs_aarch64.cpp  c0_CompileTask_aarch64.cpp  c0_Disassembler_aarch64.cpp  c0_Disassembler_aarch64.hpp  c0_MacroAssembler_aarch64.cpp  c0_MacroAssembler_aarch64.hpp  c0_NativeCompileTask_aarch64.cpp  c0_NormalCompileTask_aarch64.cpp  c0_Runtime_aarch64.cpp  debug_aarch64.cpp  frame_aarch64.cpp  frame_aarch64.inline.hpp  globals_aarch64.hpp  interp_masm_aarch64.cpp  interp_masm_aarch64.hpp  interpreterRT_aarch64.cpp  interpreter_aarch64.cpp  jniFastGetField_aarch64.cpp  macroAssembler_aarch64.cpp  macroAssembler_aarch64.hpp  nativeInst_aarch64.cpp  nativeInst_aarch64.hpp  relocInfo_aarch64.cpp  stubGenerator_aarch64.cpp  stubRoutines_aarch64.cpp  templateInterpreter_aarch64.cpp  templateTable_aarch64.cpp  vm_version_aarch64.cpp  vm_version_aarch64.hpp  vmreg_aarch64.cpp
hotspot/enclave/cpu/x86/vm/: assembler_x86.cpp  assembler_x86.hpp  assembler_x86.inline.hpp  c0_CodeStubs_x86.cpp  c0_CompileTask_x86.cpp  c0_Disassembler_x86.cpp  c0_Disassembler_x86.hpp  c0_MacroAssembler_x86.cpp  c0_MacroAssembler_x86.hpp  c0_NativeCompileTask_x86.cpp  c0_NormalCompileTask_x86.cpp  c0_NormalCompileTask_x86.h  c0_OCallCompileTask_x86.cpp  c0_Runtime_x86.cpp  frame_x86.cpp  frame_x86.inline.hpp  globals_x86.hpp  interp_masm_x86.cpp  interp_masm_x86.hpp  interp_masm_x86_64.cpp  interp_masm_x86_64.hpp  interpreterRT_x86_64.cpp  interpreter_x86_64.cpp  jniFastGetField_x86_64.cpp  macroAssembler_x86.cpp  macroAssembler_x86.hpp  nativeInst_x86.cpp  register_definitions_x86.cpp  register_x86.hpp  relocInfo_x86.cpp  runtime_x86_64.cpp  stubGenerator_x86_64.cpp  stubRoutines_x86.cpp  stubRoutines_x86_64.cpp  templateInterpreter_x86.cpp  templateInterpreter_x86_64.cpp  templateTable_x86_64.cpp  vm_version_x86.cpp  vm_version_x86.hpp
hotspot/enclave/os/linux/vm/: os_linux.cpp  os_linux.hpp  os_linux.inline.hpp  threadCritical_linux.cpp  thread_linux.inline.hpp
hotspot/enclave/os/posix/vm/: os_posix.cpp  os_posix.hpp
hotspot/enclave/os_cpu/linux_aarch64/vm/: assembler_linux_aarch64.cpp  os_linux_aarch64.cpp  threadLS_linux_aarch64.cpp  threadLS_linux_aarch64.hpp  thread_linux_aarch64.cpp
hotspot/enclave/os_cpu/linux_x86/vm/: assembler_linux_x86.cpp  os_linux_x86.cpp  threadLS_linux_x86.cpp  threadLS_linux_x86.hpp  thread_linux_x86.cpp
hotspot/enclave/panoply/: user_types.h
hotspot/enclave/panoply/EnclaveUtil/: util.cpp
hotspot/enclave/panoply/IO/: sgx_dlfcn.edl  sgx_fcntl.edl  sgx_stdio.edl  sgx_sysinfo.edl  sgx_sysuio.cpp  sgx_unistd.edl
hotspot/enclave/panoply/Thread/: Thread.cpp
hotspot/enclave/panoply/cpp/: sgx_arpainet_util.cpp  sgx_cxxabi.cpp  sgx_dirent_util.cpp  sgx_dlfcn_util.cpp  sgx_fcntl_util.cpp  sgx_grp_util.cpp  sgx_ifaddrs_util.cpp  sgx_ioctl_util.cpp  sgx_longjmp_util.cpp  sgx_mem_util.cpp  sgx_netdb_util.cpp  sgx_netif_util.cpp  sgx_netinetin_util.cpp  sgx_poll_util.cpp  sgx_pthread_util.cpp  sgx_pwd_util.cpp  sgx_signal_util.cpp  sgx_status.cpp  sgx_stdio_util.cpp  sgx_stdlib_util.cpp  sgx_sysctl_util.cpp  sgx_sysepoll_util.cpp  sgx_syseventfd_util.cpp  sgx_sysioctl_util.cpp  sgx_syslog_util.cpp  sgx_sysmman_util.cpp  sgx_sysresource_util.cpp  sgx_sysselect_util.cpp  sgx_syssendfile_util.cpp  sgx_syssocket_util.cpp  sgx_sysstat_util.cpp  sgx_syswait_util.cpp  sgx_time_util.cpp  sgx_unistd_util.cpp  sgx_utsname_util.cpp
hotspot/enclave/panoply/include/: change.sh  linux_sysinfo.h  linux_types.h  sgx_arpainet_util.h  sgx_cxxabi.h  sgx_dirent_util.h  sgx_dlfcn_util.h  sgx_fcntl_util.h  sgx_grp_util.h  sgx_ifaddrs_util.h  sgx_mem_util.h  sgx_netdb_util.h  sgx_netif_util.h  sgx_netinetin_util.h  sgx_poll_util.h  sgx_pthread_util.h  sgx_pwd_util.h  sgx_signal_util.h  sgx_ssl_util.h  sgx_stdio_util.h  sgx_stdlib_util.h  sgx_sysctl_util.h  sgx_sysepoll_util.h  sgx_syseventfd_util.h  sgx_sysioctl_util.h  sgx_syslog_util.h  sgx_sysmman_util.h  sgx_sysresource_util.h  sgx_sysselect_util.h  sgx_syssendfile_util.h  sgx_syssocket_util.h  sgx_sysstat_util.h  sgx_sysuio_util.h  sgx_syswait_util.h  sgx_time_util.h  sgx_unistd_util.h  sgx_utsname_util.h  x86_fpu_control.h
hotspot/enclave/panoply/include/proxy/: sgx_dlfcn_t.h  sgx_dlfcn_u.h  sgx_stdio_t.h  sgx_sysuio_t.h  sgx_unistd_t.h  sgx_unistd_u.h
hotspot/enclave/panoply/include/sgx/: byteswap-aarch64.h  byteswap.h
hotspot/enclave/panoply/include/struct/: sgx_dlfcn_struct.h  sgx_pthread_struct.h  sgx_stdio_struct.h  sgx_time_struct.h  sgx_utsname_struct.h
hotspot/enclave/panoply/syscall_include/: alloca.h  assert.h  byteswap.h  cxxabi.h  dirent.h  dlfcn.h  elf.h  fcntl.h  fpu_control.h  link.h  math.h  netdb.h  poll.h  pthread.h  pwd.h  sched.h  semaphore.h  setjmp.h  signal.h  stdio.h  stdlib.h  syscall.h  ucontext.h  unistd.h  utsname.h
hotspot/enclave/panoply/syscall_include/arpa/: inet.h
hotspot/enclave/panoply/syscall_include/asm/: ioctls.h
hotspot/enclave/panoply/syscall_include/gnu/: libc-version.h
hotspot/enclave/panoply/syscall_include/linux/: sysinfo.h
hotspot/enclave/panoply/syscall_include/netinet/: in.h
hotspot/enclave/panoply/syscall_include/sys/: ioctl.h  ipc.h  mman.h  param.h  poll.h  resource.h  select.h  shm.h  socket.h  stat.h  statvfs.h  syscall.h  sysinfo.h  time.h  times.h  un.h  (+2 more)
hotspot/enclave_test/: CMakeLists.txt  em_ocall.cpp  main.cpp  securecompiler_u.h
hotspot/include/: assert.h  byteswap.h  sgx_trts.h  sgx_trts_exception.h
hotspot/include/internal/: elf_util.h  se_cdefs.h
hotspot/include/internal/linux/: linux-regs.h
hotspot/include/stdc++/: new
hotspot/include/stlport/stl/: _stdexcept.h
hotspot/include/tlibc/: assert.h  inttypes.h  math.h
hotspot/include/tlibc/sys/: _types.h  cdefs.h  limits.h  stdint.h
hotspot/make/linux/makefiles/: gcc.make  mapfile-vers-product  vm.make
(+503 files in other folders)
